current_errors.txt
install
+- install neural-network-training
   +- compile exe neural-network-training Debug native 7 errors
lib\features\ai\layers.zig:106:13: error: local variable is never mutated
        var output = try Tensor.init(self.allocator, self.accel, &output_shape, .f32);
            ^~~~~~
lib\features\ai\layers.zig:106:13: note: consider using 'const'
lib\features\ai\layers.zig:131:13: error: local variable is never mutated
        var grad_input = try Tensor.init(self.allocator, self.accel, &input_shape, .f32);
            ^~~~~~~~~~
lib\features\ai\layers.zig:131:13: note: consider using 'const'
lib\features\ai\layers.zig:201:13: error: local variable is never mutated
        var output = try Tensor.init(self.allocator, self.accel, &out_shape, .f32);
            ^~~~~~
lib\features\ai\layers.zig:201:13: note: consider using 'const'
lib\features\ai\layers.zig:231:13: error: local variable is never mutated
        var output = try Tensor.init(self.allocator, self.accel, input.shape, input.data_type);
            ^~~~~~
lib\features\ai\layers.zig:231:13: note: consider using 'const'
lib\features\database\vector_search_gpu.zig:117:9: error: local variable is never mutated
    var vec = try testing.allocator.alloc(f32, 128);
        ^~~
lib\features\database\vector_search_gpu.zig:117:9: note: consider using 'const'
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\Io\Writer.zig:1371:21: error: cannot format slice without a specifier (i.e. {s}, {x}, {b64}, or {any})
                    @compileError("cannot format slice without a specifier (i.e. {s}, {x}, {b64}, or {any})");
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    printValue__anon_45667: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\Io\Writer.zig:1355:59
    print__anon_43093: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\Io\Writer.zig:702:25
    6 reference(s) hidden; use '-freference-trace=8' to see all references
lib\features\ai\layers.zig:7:21: error: no module named 'abi' available within module 'abi'
const abi = @import("abi");
                    ^~~~~
error: 7 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\zig.exe" build-exe -ODebug --dep abi "-Mroot=C:\\Users\\donald\\abi\\examples\\neural_network_training.zig" -ODebug --dep build_options --dep accelerator "-Mabi=C:\\Users\\donald\\abi\\lib\\mod.zig" "-Mbuild_options=.zig-cache\\c\\3a7d921129c2b66941febb189f7b7809\\options.zig" -ODebug --dep build_options "-Maccelerator=C:\\Users\\donald\\abi\\lib\\accelerator\\mod.zig" --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name neural-network-training --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\lib\\" --listen=-

install
+- install abi
   +- compile exe abi Debug native 5 errors
lib\features\ai\layers.zig:106:13: error: local variable is never mutated
        var output = try Tensor.init(self.allocator, self.accel, &output_shape, .f32);
            ^~~~~~
lib\features\ai\layers.zig:106:13: note: consider using 'const'
lib\features\ai\layers.zig:131:13: error: local variable is never mutated
        var grad_input = try Tensor.init(self.allocator, self.accel, &input_shape, .f32);
            ^~~~~~~~~~
lib\features\ai\layers.zig:131:13: note: consider using 'const'
lib\features\ai\layers.zig:201:13: error: local variable is never mutated
        var output = try Tensor.init(self.allocator, self.accel, &out_shape, .f32);
            ^~~~~~
lib\features\ai\layers.zig:201:13: note: consider using 'const'
lib\features\ai\layers.zig:231:13: error: local variable is never mutated
        var output = try Tensor.init(self.allocator, self.accel, input.shape, input.data_type);
            ^~~~~~
lib\features\ai\layers.zig:231:13: note: consider using 'const'
lib\features\database\vector_search_gpu.zig:117:9: error: local variable is never mutated
    var vec = try testing.allocator.alloc(f32, 128);
        ^~~
lib\features\database\vector_search_gpu.zig:117:9: note: consider using 'const'
error: 5 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\zig.exe" build-exe -ODebug --dep abi "-Mroot=C:\\Users\\donald\\abi\\tools\\cli\\main.zig" -ODebug --dep build_options --dep accelerator "-Mabi=C:\\Users\\donald\\abi\\lib\\mod.zig" "-Mbuild_options=.zig-cache\\c\\3a7d921129c2b66941febb189f7b7809\\options.zig" -ODebug --dep build_options "-Maccelerator=C:\\Users\\donald\\abi\\lib\\accelerator\\mod.zig" --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name abi --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\lib\\" --listen=-

Build Summary: 1/6 steps succeeded (2 failed)
install transitive failure
+- install abi transitive failure
|  +- compile exe abi Debug native 5 errors
+- install neural-network-training transitive failure
   +- compile exe neural-network-training Debug native 7 errors

error: the following build command failed with exit code 1:
.zig-cache\o\e7d3b383645b36a759d62def9104e25e\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib C:\Users\donald\abi .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x71d03dfa -Z961db0eb194a5a62
